# attention-backlog

./: .coveragerc  .gitignore  .readthedocs.yaml  BASELINES.md  README.md  baseline_walkthrough.html  pyproject.toml
benchmarks/: ac_load_flow_problem.py  render_baselines_md.py  validate_loader_cache.py
benchmarks/00_baseline/: baseline_ac_load_flow.py  baseline_ieee_conversion.py  baseline_linearsystem.py
benchmarks/01_gatv2/: baseline_gatv2_ac_load_flow.py  baseline_gatv2_linearsystem.py  consistency_gatv2.py  perf_gatv2_vs_localsum.py
benchmarks/02_global_aggregation/: baseline_global_aggregation_ac_load_flow.py  baseline_global_aggregation_linearsystem.py  consistency_global_aggregation.py  perf_global_aggregation_vs_localsum.py
benchmarks/03_multi_head_qkv/: baseline_multi_head_qkv_ac_load_flow.py  baseline_multi_head_qkv_linearsystem.py  consistency_multi_head_qkv.py  perf_multi_head_qkv_vs_localsum.py
benchmarks/04_performer/: baseline_performer_ac_load_flow.py  baseline_performer_linearsystem.py  consistency_performer.py  perf_performer_vs_localsum.py
benchmarks/04b_performer_localsum_combo/: baseline_combo_ac_load_flow.py  baseline_combo_linearsystem.py
benchmarks/05_combinations/: baseline_combinations_ac_load_flow.py  baseline_combinations_linearsystem.py
benchmarks/05_virtual_address/: README.md  baseline_var_ac_load_flow.py  baseline_var_linearsystem.py
benchmarks/gap_fill/: baseline_global_aggregation_capmatched_ac_load_flow.py  baseline_global_aggregation_extra_seeds_ac_load_flow.py  baseline_localsum_extra_seeds_ac_load_flow.py  (+3 more)
docs/: Makefile  basics.rst  conf.py  custom_use_case.rst  glossary.rst  index.rst  tutorial_notebook.ipynb
tests/: __init__.py  utils.py
(+143 files in other folders)
